@@ -1,31 +1,0 @@
-sb_trie_open
-sb_trie_close
-sb_trie_save
-sb_trie_retrieve
-sb_trie_store
-sb_trie_delete
-sb_trie_enumerate
-sb_trie_root
-sb_trie_state_clone
-sb_trie_state_free
-sb_trie_state_rewind
-sb_trie_state_walk
-sb_trie_state_is_walkable
-sb_trie_state_is_terminal
-sb_trie_state_is_leaf
-sb_trie_state_get_data
-trie_open
-trie_close
-trie_save
-trie_retrieve
-trie_store
-trie_delete
-trie_enumerate
-trie_root
-trie_state_clone
-trie_state_free
-trie_state_rewind
-trie_state_walk
-trie_state_is_walkable
-trie_state_is_leaf
-trie_state_get_data
