@@ -1,3 +1,9 @@
+2009-04-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* datrie/Makefile.am, datrie/libdatrie.def -> datrie/libdatrie.map:
+	Replace libtool symbol exports with symbol versioning, to ease
+	upgrading across SONAME.
+
 2008-12-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Get rid of the weird TrieIndexInt intermediate type, by checking
